[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "mi-unlock-blaster"
version         = "1.1.0"
description     = "Fire simultaneous Xiaomi bootloader unlock requests at midnight (China time) with <10ms spread"
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "whitedevil0420", email = "whitedevil0420@users.noreply.github.com" }]
keywords        = ["xiaomi", "bootloader", "unlock", "mi-community"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies    = [
    "requests>=2.28.0",
    "ntplib>=0.4.0",
    "pytz>=2023.3",
    "rich>=12.0.0",
    "qrcode>=7.0",
]

[project.urls]
Homepage   = "https://github.com/whitedevil0420/mi-unlock-blaster"
Repository = "https://github.com/whitedevil0420/mi-unlock-blaster"
Issues     = "https://github.com/whitedevil0420/mi-unlock-blaster/issues"

[project.scripts]
mi-unlock-blaster = "mi_unlock_blaster.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mi_unlock_blaster*"]
